fix(categories): avoid NPE when counting API by category
**Issue** [APIM-7299](https://gravitee.atlassian.net/browse/APIM-7299)

## Description

Avoid an error prone managment: instead of return a `Map<String, Long>` return a `FunctionToLong<String>`.

Users of the function don't need manage null value anymore, the function return always a value: the number of APIs or 0.

(cherry picked from commit b8d91b56fcd66f1c63f21a213b153a07dd7d557b)